# sdet_ss_2024_practicum

./: .gitignore  README.md  pyproject.toml  pytest.ini  utilits.py
.github/workflows/: python-package.yml
pages/: add_customer_page.py  base_page.py  customers_page.py  delete_customers_page.py  locators.py  sort_customers_page.py
sdet_ss_2024_practicum/: pyproject.toml
tests/: conftest.py  test_add_customer.py  test_delete_customer.py  test_sort_by_first_name.py  utilits.py
